# hallucinated-reference-finder-bracis-sbc

./: .gitignore  ADAPTATION_NOTES.md  ANALYSIS_IMPROVEMENTS.md  README.md  analysis_example.py  config.example.toml  config.fast-apis.toml  diagnose_extraction.py  example_pipeline.py  process_pdfs_analyzed.py  process_real_pdfs.py  pyproject.toml  requirements-extras.txt  requirements.txt  test_hallucination_detection.py
new-styles/: README.md  SBC_STYLE.md  SPLNCS_STYLE.md
results/: report.json  report_annotated.bib
results/bib/: SBCAS_2026___Artigo_Luciano_e_Mateus.bib
src/halref/: __init__.py  analysis.py  cli.py  config.py  hardware.py  models.py  pipeline.py
src/halref/agent/: llm_verify.py  strategies.py
src/halref/apis/: acl_anthology.py  base.py  crossref.py  dblp.py  openalex.py  semantic_scholar.py
src/halref/extract/: base.py  bib_reader.py  bib_writer.py  ensemble.py  llm_batch_refs.py  ref_section.py  repair.py  splitter.py  title_cleanup.py
src/halref/matching/: author_matcher.py  metadata_matcher.py  scorer.py  title_matcher.py
src/halref/output/: report.py  (+3 more)
tests/: bib_ground_truth.py  test_bib_canonical.py  test_bib_extraction.py  test_extraction.py  test_ground_truth.py  test_ref_section_and_splitter.py  test_risk_reports.py  test_style_detection.py  test_text_after_year.py  test_title_cleanup.py  test_title_scoring.py  test_year_context.py
tests/fixtures/: download_acl_papers.py  extra_refs.bib  generate_test_pdf.py  test_paper_hallucinated.tex  test_paper_limitations.tex  test_paper_long_refs.tex  test_paper_real.tex  test_refs.bib
(+13 files in other folders)
